--- a/src/app/chatbot/chatbot.html
+++ b/src/app/chatbot/chatbot.html
@@ -24,7 +24,7 @@
       <div *ngFor="let msg of messages" [ngClass]="msg.sender === 'user' ? 'message-user' : 'message-bot'">
         <div *ngIf="msg.sender === 'bot'" class="message-bot-content">
           <img src="assets/bot.png" alt="Bot" class="message-bot-icon" />
-          <span class="message-text">{{ msg.text }}</span>
+          <span class="message-text" [innerHTML]="msg.text"></span>
         </div>
         <div *ngIf="msg.sender === 'user'" class="message-user-content">
           <span class="message-text">{{ msg.text }}</span>
