--- a/src/app/chatbot/chatbot.scss
+++ b/src/app/chatbot/chatbot.scss
@@ -340,3 +340,65 @@
     opacity: 1;
   }
 }
+
+// Markdown styling
+.message-bot-content ::ng-deep .markdown-content,
+.message-user-content ::ng-deep .markdown-content {
+  p { margin: 0 0 0.75em 0; &:last-child { margin-bottom: 0; } }
+  h1, h2, h3, h4, h5, h6 { font-weight: 600; margin: 1em 0 0.5em 0; &:first-child { margin-top: 0; } }
+  ul, ol { margin: 0 0 0.75em 0; padding-left: 1.5em; &:last-child { margin-bottom: 0; } }
+  
+  code {
+    padding: 0.125em 0.25em;
+    border-radius: 3px;
+    font-family: monospace;
+    font-size: 0.9em;
+  }
+  
+  pre {
+    padding: 0.75em;
+    border-radius: 6px;
+    overflow-x: auto;
+    margin: 0 0 0.75em 0;
+    &:last-child { margin-bottom: 0; }
+    
+    code { background-color: transparent; padding: 0; font-size: 0.875em; }
+  }
+  
+  a { text-decoration: none; &:hover { text-decoration: underline; } }
+  strong { font-weight: 600; }
+  em { font-style: italic; }
+}
+
+.message-bot-content ::ng-deep .markdown-content {
+  color: #212529;
+  
+  code {
+    background-color: #f8f9fa;
+    color: #d63384;
+  }
+  
+  pre {
+    background-color: #f8f9fa;
+  }
+  
+  a {
+    color: rgb(59, 130, 246);
+  }
+}
+
+.message-user-content ::ng-deep .markdown-content {
+  color: white;
+  
+  code {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  
+  pre {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  a {
+    color: white;
+  }
+}
